fix: fit for jdk8